# YoutubeTranscript

./: .gitignore  CLAUDE.md  MISTAKES.md  README.md  claude-python-template.md  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/skills/create-skill/: SKILL.md
.claude/skills/push/: SKILL.md
.claude/skills/start/: SKILL.md
docs/: cloud-ip-troubleshooting.md
docs/mistakes/archive/: M-000.md
docs/plans/: 2026-02-13-youtube-transcript-design.md
docs/plans/archive/: 2026-02-13-fix-package-install.md
src/youtubetranscript/: captions.py  cli.py  downloader.py  formatter.py  metadata.py  pipeline.py  transcriber.py  writer.py
tests/: test_captions.py  test_downloader.py  test_entrypoint.py  test_formatter.py  test_metadata.py  test_pipeline.py  test_transcriber.py  test_writer.py
