[project]
name = "youtubetranscript"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.2.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
